Website fixes: screenshots sizes, better alignment on mobile devices, updated font sizes.

--- a/styles.css
+++ b/styles.css
@@ -311,8 +311,7 @@ section#features img
 {
     border: 1px solid #ccc;
     padding: 10px;
-    max-width: 550px;
-    width: 100%;
+    width: 550px;
     margin-top: 0;
 }
 
